generated/traefik.k8s.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  routes:
    - kind: Rule
      match: Host(`traefik.services.mkz.me`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      middlewares:
        - name: traefik-forward-auth-traefik-forward-auth@kubernetescrd
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: secret-tls-www
